Admin - fix minor layout issues

--- a/asset/less/admin.less
+++ b/asset/less/admin.less
@@ -6,3 +6,7 @@ tr.gray {
 		}
 	}
 }
+
+ul.alert {
+	list-style-type: none;
+}
